# OmniLink

./: .dockerignore  .env.example  .gitignore  CODE_REVIEW_REPORT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT_PROGRESS.md  DEV_PLAN.md  Dockerfile  FINAL_SUMMARY.md  NEXT_ITERATION_PLAN.md  PARALLEL_DEVELOPMENT_PLAN.md  PAUSED.md  PLAN_WEBRTC.md  PROGRESS.md  PROJECT_PLAN.md  README.md  TASK_QUEUE.md  V2_ITERATION_TODO.md  annotate_handlers.py  dev_agent.py  dev_scheduler.sh  dev_session_manager.py  docker-compose.prod.yml  docker-compose.yml  fix_task_queue.py  fix_task_state.py  integration_test.sh  tarpaulin.toml  task_list.txt  task_scheduler.py
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml  deploy.yml  e2e-tests.yml  quality.yml  rust-tests.yml  test.yml
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: compression_performance.rs  database_queries.rs  message_throughput.rs  websocket_concurrent.rs
benchmarks/scripts/: load_test.py  run_benchmarks.sh  run_compression_benchmarks.sh
crates/ai-service/: Cargo.toml
crates/ai-service/src/: api_key_store.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  models_test.rs  repository.rs  router.rs  services.rs
crates/ai-service/src/providers/: anthropic.rs  ernie.rs  google.rs  mod.rs  openai.rs  qwen.rs  zhipu.rs
crates/common/: Cargo.toml
crates/common/src/: api_version.rs  audit.rs  auth.rs  cache.rs  circuit_breaker.rs  config.rs  crypto.rs  db.rs  error.rs  graceful_shutdown.rs  health_aggregator.rs  key_rotation.rs  lib.rs  log_level.rs  message_delivery.rs  middleware.rs  models.rs  pool_manager.rs  pool_monitor.rs  request_validation.rs  secrets.rs  security.rs  structured_logging.rs  system_metrics.rs  tracing_setup.rs  utils.rs  validation.rs
crates/config-service/: Cargo.toml
crates/config-service/src/: handlers.rs  main.rs  middleware.rs  models.rs  repository.rs  services.rs
crates/file-service/: Cargo.toml
crates/file-service/src/: handlers.rs  lib.rs  main.rs  models.rs  presign.rs  progress.rs  repository.rs  services.rs  storage.rs
crates/im-api/: AUTH_API.md  Cargo.toml  IMPLEMENTATION.md
crates/im-api/migrations/: 001_create_users.sql
crates/im-api/src/: lib.rs  main.rs  openapi.rs
crates/im-api/src/db/: admin.rs  announcement.rs  api_key.rs  chat_export.rs  contact.rs  conversation.rs  data_retention.rs  feedback.rs  message.rs  message_retry.rs  mod.rs  quick_reply.rs  user.rs  user_activity.rs  user_preferences.rs  webhook.rs
crates/im-api/src/handlers/: admin.rs  announcement.rs  api_key.rs  audit.rs  auth.rs  chat_export.rs  contact.rs  conversation.rs  data_retention.rs  delivery.rs  encryption.rs  export_worker.rs  feedback.rs  health.rs  message.rs  message_retry.rs  metrics.rs  mod.rs  quick_reply.rs  scheduled_task.rs  user_activity.rs  user_preferences.rs  webhook.rs
crates/im-api/src/middleware/: auth.rs  compression.rs  config_reload.rs  error_capture.rs  etag.rs  mod.rs  rate_limit.rs  redis_rate_limit.rs  request_id.rs  request_timing.rs  security_headers.rs  validated_json.rs
crates/im-api/src/models/: admin.rs  announcement.rs  api_key.rs  auth.rs  chat_export.rs  conversation.rs  data_retention.rs  feedback.rs  message.rs  mod.rs  quick_reply.rs  user_activity.rs  user_preferences.rs  webhook.rs
crates/im-api/src/services/: mod.rs  webhook_dispatch.rs
crates/im-api/src/utils/: jwt.rs
crates/im-api/tests/: compression_test.rs
crates/im-gateway/: Cargo.toml  WEBSOCKET.md
crates/im-gateway/src/: block_manager.rs  connection_manager.rs  connection_quality.rs  conversation_service.rs  handlers.rs  lib.rs  main.rs  message_batcher.rs  metrics.rs  middleware.rs  models.rs  models_test.rs  notification_pipeline.rs  offline_queue.rs  presence_channel.rs  reactions.rs  repository.rs  server.rs  services.rs  status_manager.rs  user_repository.rs
crates/im-gateway/src/handlers/: file_upload.rs  mod.rs  user_management.rs  ws.rs
crates/push-service/: Cargo.toml
crates/push-service/src/: handlers.rs  lib.rs  main.rs  models.rs  providers.rs  repository.rs  services.rs
crates/usage-service/: Cargo.toml
crates/usage-service/src/: handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  repository.rs  services.rs
crates/user-service/: Cargo.toml
crates/user-service/src/: error.rs  handlers.rs  handlers_test.rs  jwt.rs  lib.rs  main.rs  middleware.rs  models.rs  password.rs  repository.rs  services.rs
docs/: API.md
docs/api/: README.md
docs/deployment/: DEPLOYMENT.md  README.md
docs/operations/: README.md  performance-tuning.md
docs/progress_reports/: 2024-03-16_09-00.md  2024-09-16_09-00.md  2026-04-29.md  2026-04-29_1500.md  2026-04-29_1545.md  2026-04-29_1550.md  2026-04-29_1610.md  2026-04-30_09-00.md  2026-04-30_15-00.md  2026-05-01_09-00.md  2026-05-01_15-00.md  2026-05-02_09-00.md  2026-05-02_15-00.md  2026-05-03_09-00.md  (+25 more)
frontend/: FRONTEND_PROGRESS.md
migrations/: 001_initial_schema.sql  002_add_user_devices.sql  003_add_im_tables.sql  004_add_usage_tables.sql  005_add_config_tables.sql  006_add_file_tables.sql  007_file_shares.sql  008_message_reactions.sql  009_member_roles.sql  010_pinned_messages.sql  011_blocked_users.sql  012_notification_preferences.sql  013_contacts.sql  014_message_retry_queue.sql  015_conversation_user_state.sql  016_burn_after_reading.sql  017_system_announcements.sql  018_quick_replies.sql  018_user_feedback.sql  019_export_jobs.sql  020_export_jobs_fix_column.sql  021_delivery_receipts.sql  022_search_optimization.sql  023_user_preferences.sql  024_admin_user_activity.sql  024_webhooks.sql  025_data_retention.sql  026_api_keys.sql  027_user_public_keys.sql
mobile/: DEVELOPMENT_GUIDE.md  UI_DESIGN_GUIDE.md
monitoring/: README.md
nginx/: nginx.conf
scripts/: run_coverage.sh
src/: main.rs
tests/integration/: Cargo.toml  run_tests.sh
tests/integration/src/: config.rs  factory.rs  lib.rs
tests/integration/tests/: api_endpoints.rs  conversation_tests.rs  file_tests.rs  message_tests.rs  user_tests.rs  websocket_tests.rs
(+172 files in other folders)
