[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/im-gateway",
    "crates/im-api",
    "crates/ai-service",
    "crates/user-service",
    "crates/file-service",
    "crates/usage-service",
    "crates/push-service",
    "crates/config-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RiceBall-15"]
license = "MIT"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# Web框架
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
headers = "0.4"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
mongodb = "2.8"

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.5"

# WebSocket
tokio-tungstenite = "0.21"
futures = "0.3"

# 认证与安全
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"

# 配置管理
config = "0.14"
dotenvy = "0.15"

# 日志与监控
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 工具库
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
dashmap = "5.5"
parking_lot = "0.12"
validator = { version = "0.16", features = ["derive"] }

# 测试
mockall = "0.12"
tokio-test = "0.4"

# API 文档
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }