[package]
name = "ai-service"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

# AI dependencies
async-openai = "0.14"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
anyhow.workspace = true

# Internal dependencies
common = { path = "../common" }