[package]
name = "ai-service"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

# AI dependencies
async-openai = "0.14"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
anyhow.workspace = true
tiktoken-rs = "0.4"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
surrealdb = { version = "1.0", optional = true }

# Internal dependencies
common = { path = "../common" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"