[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Additional dependencies
aes-gcm = "0.10"
base64 = "0.21"
argon2 = { version = "0.5", features = ["password-hash"] }
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken.workspace = true
config.workspace = true