[package]
name = "config-service"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
sqlx.workspace = true
thiserror.workspace = true

# HTTP client for callbacks
reqwest.workspace = true

# Internal dependencies
common = { path = "../common" }