[package]
name = "file-service"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Internal dependencies
common = { path = "../common" }

# Additional dependencies
anyhow = "1"
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
async-trait = "0.1"
reqwest = { workspace = true }
tempfile = "3"  # 用于测试
