[package]
name = "im-api"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

# API dependencies
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression"] }
jsonwebtoken.workspace = true
validator = { version = "0.16", features = ["derive"] }

# Internal dependencies
common = { path = "../common" }