[package]
name = "im-api"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# API dependencies
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "compression-br", "trace"] }
jsonwebtoken.workspace = true
validator = { version = "0.16", features = ["derive"] }

# Database
sqlx.workspace = true

# Password hashing
bcrypt = "0.15"

# Email validation
email-validator = "0.1"

# Internal dependencies
common = { path = "../common" }

# Base64 encoding/decoding for encryption handlers
base64 = "0.21"

# SHA256 for ETag computation
sha2 = "0.10"

# Startup dependencies
tracing-subscriber.workspace = true
dotenvy.workspace = true

# API documentation
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# CSV export support
csv = "1"

# File watching for config hot-reload
notify = "6"
notify-debouncer-mini = "0.4"

# Config file parsing
toml = "0.8"
serde_yaml = "0.9"