[package]
name = "im-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true

# WebSocket dependencies
tokio-tungstenite = "0.20"
futures-util = "0.3"
async-trait = "0.1"

# Message dependencies
redis.workspace = true
sqlx.workspace = true

# Internal dependencies
common = { path = "../common" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"