[package]
name = "push-service"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

# Push service dependencies
reqwest = { version = "0.11", features = ["json"] }

# Internal dependencies
common = { path = "../common" }