[package]
name = "push-service"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
anyhow.workspace = true

# Internal dependencies
common = { path = "../common" }

# HTTP client for push providers
reqwest.workspace = true
# JWT for APNs token generation
jsonwebtoken.workspace = true
