[package]
name = "usage-service"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

# Usage service dependencies
chrono-tz = "0.8"

# Internal dependencies
common = { path = "../common" }

# Missing dependencies
anyhow.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
sqlx.workspace = true