[package]
name = "user-service"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

# User service dependencies
argon2 = { version = "0.5", features = ["password-hash"] }
validator = { version = "0.16", features = ["derive"] }

# Internal dependencies
common = { path = "../common" }