[package]
name = "omnilink-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tokio-tungstenite = "0.20"
futures-util = "0.3"
dotenv = "0.15"
rand = "0.8"
once_cell = "1"
base64 = "0.21"

[dev-dependencies]
pretty_assertions = "1"
